@@ -3,7 +3,7 @@
 .\"
 .\"   lpmove man page for the Common UNIX Printing System (CUPS).
 .\"
-.\"   Copyright 1997-2005 by Easy Software Products.
+.\"   Copyright 1997-2006 by Easy Software Products.
 .\"
 .\"   These coded instructions, statements, and computer programs are the
 .\"   property of Easy Software Products and are protected by Federal
@@ -21,33 +21,41 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH lpmove 8 "Common UNIX Printing System" "23 January 2001" "Easy Software Products"
+.TH lpmove 8 "Common UNIX Printing System" "18 January 2006" "Easy Software Products"
 .SH NAME
-lpmove \- move a job to a new destination
+lpmove \- move a job or all jobs to a new destination
 .SH SYNOPSIS
 .B lpmove
-[ -E ]
+[ -E ] [ -h
+.I server
+]
 .I job destination
+.br
+.B lpmove
+[ -E ] [ -h
+.I server
+]
+.I source destination
 .SH DESCRIPTION
-\fBlpmove\fR moves the specified \fIjob\fR to \fIdestination\fR. \fIjob\fR
-can be the job ID number or the old destination and job ID:
+\fBlpmove\fR moves the specified \fIjob\fR or all jobs from
+\fIsource\fR to \fIdestination\fR. \fIjob\fR can be the job ID
+number or the old destination and job ID:
 .br
 .nf
 
      lpmove 123 newprinter
      lpmove oldprinter-123 newprinter
 .fi
-.LP
+.SH OPTIONS
 The \fI-E\fR option forces encryption when connecting to the server.
-.SH COMPATIBILITY
-The System V version of this command also allows moving of all jobs from one
-queue to another. This functionality is currently not supported by CUPS.
+.LP
+The \fI-h\fR option specifies an alternate server.
 .SH SEE ALSO
-cancel(1), lp(1),
-CUPS Software Users Manual,
-http://localhost:631/documentation.html
+cancel(1), lp(1)
+.br
+http://localhost:631/help
 .SH COPYRIGHT
-Copyright 1993-2005 by Easy Software Products, All Rights Reserved.
+Copyright 1993-2006 by Easy Software Products, All Rights Reserved.
 .\"
 .\" End of "$Id$".
 .\"
